cmake_minimum_required(VERSION 3.7)

add_subdirectory(recursion)
add_subdirectory(binary-search-tree)
add_subdirectory(segment-tree)
add_subdirectory(dynamic-programming)
add_subdirectory(kalman-filter)
add_subdirectory(strings)
add_subdirectory(greedy-algorithms)
add_subdirectory(sliding-window)
add_subdirectory(heap)
add_subdirectory(binary-search)
add_subdirectory(stlexamples)
add_subdirectory(skyline)
add_subdirectory(stack)
add_subdirectory(matrix)
add_subdirectory(sort)
add_subdirectory(graph)
