cmake_minimum_required(VERSION 3.7)

#project(heap)
#set(EXEC_NAME heap)
#set(SOURCE_FILES BinaryHeap.h)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
#set(EXECUTABLE_OUTPUT_PATH ../../dist/${CMAKE_BUILD_TYPE})
#add_executable(${EXEC_NAME} ${SOURCE_FILES})

add_subdirectory(klargestitems)
add_subdirectory(kmerge)
add_subdirectory(cubesum)
add_subdirectory(klargestmaxheap)


